--- a/styles/all.css
+++ b/styles/all.css
@@ -138,8 +138,8 @@ margin-top: 20px;
     z-index: 1;
     background-color:lightblue;
     padding: 0px;
-    margin-left: 2px;
-    margin-right: 5px;
+    /* margin-left: 2px;
+    margin-right: 5px; */
     margin-top: 30px;
     height: 150px;
     width: 100%;
@@ -151,7 +151,6 @@ margin-top: 20px;
 
 
 .logo{
-    margin-right: 5%;
     padding: 0;
     width:100%;
 }
@@ -171,13 +170,12 @@ margin-top: 20px;
     flex-direction:row;
     /*background-color: lightblue;*/
     top: 0px;
-    width: 2000px;
+    width: 100%;
     z-index: 1;
 }
 
 #nav ul {
     font-size: 20px;
-    padding: 35px;
     /*background-color: lightblue;*/
     text-align: center;
 
@@ -185,7 +183,7 @@ margin-top: 20px;
 }
 
 #nav li {
-    padding: 27px;
+    padding: 62px;
     display: inline;
     text-decoration: none;
 
@@ -256,7 +254,7 @@ footer a {
 
 .divfooter{
     width: 100%;
-    margin-top: 100px;
+    margin-top: 500px;
     margin-bottom: 0px;
     background-color: #00a6c6;
 }
